<resources>
    <string name="app_name">AppPortfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">My Nanodegree Apps!</string>
    <string name="app_1_name">POPULAR MOVIES</string>
    <string name="app_2_name">SCORES APP</string>
    <string name="app_3_name">LIBRARY APP</string>
    <string name="app_4_name">BUILD IT BIGGER</string>
    <string name="app_5_name">XYZ READER</string>
    <string name="app_6_name">CAPSTONE: MY OWN APP</string>
</resources>
