<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

    <TextView
        android:id="@+id/title"
        android:text="@string/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingBottom="20dp"
        android:textColor="#3f51b5"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/title">
        <Button
            android:layout_weight="1"
            android:textStyle="bold"
            android:id="@+id/app_1"
            android:text="@string/app_1_name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <Button
            android:layout_weight="1"
            android:textStyle="bold"
            android:id="@+id/app_2"
            android:text="@string/app_2_name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <Button
            android:layout_weight="1"
            android:textStyle="bold"
            android:id="@+id/app_3"
            android:text="@string/app_3_name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <Button
            android:layout_weight="1"
            android:textStyle="bold"
            android:id="@+id/app_4"
            android:text="@string/app_4_name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <Button
            android:layout_weight="1"
            android:textStyle="bold"
            android:id="@+id/app_5"
            android:text="@string/app_5_name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <Button
            android:background="#e91e63"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:id="@+id/app_6"
            android:text="@string/app_6_name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

    </LinearLayout>
</RelativeLayout>
